syntax = "proto3";
package reinhardt.user_events;

import "user.proto";
import "common.proto";

// Event type
message UserEvent {
  enum EventType {
    CREATED = 0;
    UPDATED = 1;
    DELETED = 2;
  }

  EventType type = 1;
  reinhardt.user.User user = 2;  // For non-DELETED events
  string user_id = 3;             // User ID for DELETED events
  reinhardt.common.Timestamp timestamp = 4;
}

// Subscription request
message SubscribeUserEventsRequest {
  repeated string event_types = 1;  // Filter (empty = all)
  optional string user_id = 2;       // Specific user only (empty = all)
}

// UserEventsService definition (Server Streaming)
service UserEventsService {
  // Stream user events
  rpc SubscribeUserEvents(SubscribeUserEventsRequest) returns (stream UserEvent);
}
